--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "dependencies": {
     "@capacitor/android": "2.4.7",
-    "@capacitor/cli": "^2.4.7",
-    "@capacitor/core": "^2.4.7",
+    "@capacitor/cli": "2.4.7",
+    "@capacitor/core": "2.4.7",
     "@capacitor/ios": "2.4.7",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
