--- a/ios/App/App/AppRelease.entitlements
+++ b/ios/App/App/AppRelease.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>applinks:usmanniqbal.github.io</string>
+		<string>applinks:app.eventmobi.com</string>
 	</array>
 </dict>
 </plist>
